ownsvnpan/src/test3/svnauthzParser.java
// Generated from C:/git/giy/ownsvnpan/src/test\svnauthz.g4 by ANTLR 4.5.1
package test3;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class svnauthzParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, Role=19, ID2=20, ID=21, WS=22;
	public static final int
		RULE_prog = 0, RULE_orders = 1, RULE_svnauthz = 2, RULE_opts = 3, RULE_optU = 4, 
		RULE_username1 = 5, RULE_optA = 6, RULE_optP = 7, RULE_optR = 8, RULE_optD = 9, 
		RULE_optRight = 10;
	public static final String[] ruleNames = {
		"prog", "orders", "svnauthz", "opts", "optU", "username1", "optA", "optP", 
		"optR", "optD", "optRight"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\n'", "'svnauthz '", "'-a '", "'-d '", "'-ru '", "'-rp '", "'-q '", 
		"','", "'-as '", "'-p '", "'-r '", "'-dir '", "'+'", "'-'", "'='", "'R'", 
		"'RW'", "'W'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "Role", "ID2", "ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "svnauthz.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public svnauthzParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public OrdersContext orders() {
			return getRuleContext(OrdersContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			orders();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrdersContext extends ParserRuleContext {
		public SvnauthzContext svnauthz() {
			return getRuleContext(SvnauthzContext.class,0);
		}
		public OptsContext opts() {
			return getRuleContext(OptsContext.class,0);
		}
		public OrdersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orders; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOrders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOrders(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOrders(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrdersContext orders() throws RecognitionException {
		OrdersContext _localctx = new OrdersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_orders);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			svnauthz();
			setState(25);
			opts();
			setState(26);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SvnauthzContext extends ParserRuleContext {
		public SvnauthzContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_svnauthz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterSvnauthz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitSvnauthz(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitSvnauthz(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SvnauthzContext svnauthz() throws RecognitionException {
		SvnauthzContext _localctx = new SvnauthzContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_svnauthz);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptsContext extends ParserRuleContext {
		public List<OptUContext> optU() {
			return getRuleContexts(OptUContext.class);
		}
		public OptUContext optU(int i) {
			return getRuleContext(OptUContext.class,i);
		}
		public List<OptAContext> optA() {
			return getRuleContexts(OptAContext.class);
		}
		public OptAContext optA(int i) {
			return getRuleContext(OptAContext.class,i);
		}
		public List<OptPContext> optP() {
			return getRuleContexts(OptPContext.class);
		}
		public OptPContext optP(int i) {
			return getRuleContext(OptPContext.class,i);
		}
		public List<OptRContext> optR() {
			return getRuleContexts(OptRContext.class);
		}
		public OptRContext optR(int i) {
			return getRuleContext(OptRContext.class,i);
		}
		public List<OptDContext> optD() {
			return getRuleContexts(OptDContext.class);
		}
		public OptDContext optD(int i) {
			return getRuleContext(OptDContext.class,i);
		}
		public List<OptRightContext> optRight() {
			return getRuleContexts(OptRightContext.class);
		}
		public OptRightContext optRight(int i) {
			return getRuleContext(OptRightContext.class,i);
		}
		public OptsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOpts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOpts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOpts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptsContext opts() throws RecognitionException {
		OptsContext _localctx = new OptsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_opts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(36);
				switch (_input.LA(1)) {
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
					{
					setState(30);
					optU();
					}
					break;
				case T__8:
					{
					setState(31);
					optA();
					}
					break;
				case T__9:
					{
					setState(32);
					optP();
					}
					break;
				case T__10:
					{
					setState(33);
					optR();
					}
					break;
				case T__11:
					{
					setState(34);
					optD();
					}
					break;
				case T__12:
				case T__13:
				case T__14:
					{
					setState(35);
					optRight();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(38); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptUContext extends ParserRuleContext {
		public Username1Context username1() {
			return getRuleContext(Username1Context.class,0);
		}
		public OptUContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optU; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOptU(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOptU(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOptU(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptUContext optU() throws RecognitionException {
		OptUContext _localctx = new OptUContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_optU);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(41);
			username1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Username1Context extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(svnauthzParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(svnauthzParser.ID, i);
		}
		public Username1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_username1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterUsername1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitUsername1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitUsername1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Username1Context username1() throws RecognitionException {
		Username1Context _localctx = new Username1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_username1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(ID);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(44);
				match(T__7);
				setState(45);
				match(ID);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptAContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(svnauthzParser.ID, 0); }
		public OptAContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optA; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOptA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOptA(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOptA(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptAContext optA() throws RecognitionException {
		OptAContext _localctx = new OptAContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_optA);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__8);
			setState(52);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptPContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(svnauthzParser.ID, 0); }
		public OptPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOptP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOptP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOptP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptPContext optP() throws RecognitionException {
		OptPContext _localctx = new OptPContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_optP);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__9);
			setState(55);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptRContext extends ParserRuleContext {
		public TerminalNode Role() { return getToken(svnauthzParser.Role, 0); }
		public OptRContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optR; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOptR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOptR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOptR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptRContext optR() throws RecognitionException {
		OptRContext _localctx = new OptRContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_optR);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(T__10);
			setState(58);
			match(Role);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptDContext extends ParserRuleContext {
		public TerminalNode ID2() { return getToken(svnauthzParser.ID2, 0); }
		public OptDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optD; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOptD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOptD(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOptD(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptDContext optD() throws RecognitionException {
		OptDContext _localctx = new OptDContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_optD);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__11);
			setState(61);
			match(ID2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptRightContext extends ParserRuleContext {
		public OptRightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optRight; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).enterOptRight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof svnauthzListener ) ((svnauthzListener)listener).exitOptRight(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof svnauthzVisitor ) return ((svnauthzVisitor<? extends T>)visitor).visitOptRight(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptRightContext optRight() throws RecognitionException {
		OptRightContext _localctx = new OptRightContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_optRight);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(64);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << T__16) | (1L << T__17))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}